# azure-spot-finder

./: .env.sample  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yaml
api/: README.md  main.py
api/clients/: azure_client.py  client.py  compute_client.py  eviction_client.py  pricing_client.py
api/config/: dependencies.py
api/routes/: sku_routes.py
api/services/: recommendation_service.py  sku_service.py
api/utils/: cache.py
backend/: README.md
backend/app/: __init__.py  azure_client.py  cache.py  deps.py  filters.py  main.py  params.py  schemas.py
